--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "spdx-satisfies": "^5.0.0",
     "ts-check": "0.2.4",
     "typescript": "^4.1.3",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "react-google-charts": "^3.0.15"
   }
 }
