--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hv/uikit-react-core",
-  "version": "3.29.0",
+  "version": "3.29.1-alpha.0",
   "description": "A collection of React components for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
@@ -46,8 +46,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@hv/uikit-common-themes": "^3.0.3",
-    "@hv/uikit-react-icons": "^3.3.1",
+    "@hv/uikit-common-themes": "^3.0.4-alpha.0",
+    "@hv/uikit-react-icons": "^3.3.2-alpha.0",
     "@popperjs/core": "2.6.0",
     "attr-accept": "^2.2.2",
     "clsx": "^1.1.1",
