--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hv/uikit-react-lab",
-  "version": "3.11.1-alpha.0",
+  "version": "3.11.0",
   "description": "A collection of contributed React components for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
@@ -45,8 +45,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@hv/uikit-react-core": "^3.29.1-alpha.0",
-    "@hv/uikit-react-icons": "^3.3.2-alpha.0",
+    "@hv/uikit-react-core": "^3.29.0",
+    "@hv/uikit-react-icons": "^3.3.1",
     "clsx": "^1.1.1",
     "core-js": "^3.8.1",
     "lodash": "^4.17.20",
