--- a/package.json
+++ b/package.json
@@ -99,10 +99,11 @@
     "npm-run-all": "^4.1.5",
     "plotly.js-basic-dist": "^1.57.1",
     "prettier": "^2.2.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-docgen": "^5.3.1",
     "react-docgen-deprecation-handler": "^1.1.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-hook-form": "^6.9.6",
     "react-monaco-editor": "0.36.0",
     "react-resize-aware": "^3.0.1",
@@ -110,7 +111,6 @@
     "spdx-satisfies": "^5.0.0",
     "ts-check": "0.2.4",
     "typescript": "^4.1.3",
-    "yup": "^0.29.3",
-    "react-google-charts": "^3.0.15"
+    "yup": "^0.29.3"
   }
 }
