--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,8 +41,8 @@
   "peerDependencies": {
     "@material-ui/core": "^4.11.0",
     "plotly.js-basic-dist": "^1.55.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
@@ -73,11 +73,11 @@
     "@testing-library/user-event": "^12.2.2",
     "@types/lodash": "^4.14.161",
     "@types/plotly.js": "^1.50.19",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "cash-cp": "^0.2.0",
     "cross-env": "^7.0.2",
     "del-cli": "^3.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.0",
     "jest": "^26.4.2",
     "jest-canvas-mock": "^2.2.0",
