--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -40,8 +40,8 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.11.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
@@ -66,7 +66,7 @@
     "cash-cp": "^0.2.0",
     "del-cli": "^3.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "enzyme-to-json": "^3.6.0",
     "jest": "^26.4.2",
     "jest-junit": "^11.1.0",
