chore: update peer deps on icons

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -39,8 +39,8 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.11.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
