--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.7.2",
     "rc-slider": "8.6.3",
     "rc-tooltip": "^3.7.3",
+    "react-color": "^2.19.3",
     "react-table": "^7.7.0"
   },
   "devDependencies": {
