fix(base-dropdown): prevent bad positioning with popper

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,6 +60,7 @@
     "focus-within-polyfill": "5.1.0",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.20",
+    "popper-max-size-modifier": "^0.2.0",
     "prop-types": "^15.7.2",
     "react-debounce-render": "^7.0.0",
     "react-outside-click-handler": "^1.3.0",
