feat(timeago): add component
relates to https://hv-eng.atlassian.net/browse/TAP-4706

implements component according to DFM TimeAgo component
and DS DateFormat relative time guidelines
https://xd.adobe.com/view/1b7df235-5cf8-4b51-a2f0-0be1bb591c55-4e2e/

--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -51,6 +51,7 @@
     "@types/react-table": "^7.7.1",
     "clsx": "^1.1.1",
     "core-js": "^3.8.1",
+    "dayjs": "^1.10.6",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
