--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,6 +76,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.8.3",
     "@types/lodash": "^4.14.173",
     "@types/plotly.js": "^1.54.16",
