--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -90,6 +90,7 @@
     "jest-canvas-mock": "^2.3.1",
     "jest-junit": "^13.0.0",
     "nodemon": "^2.0.15",
+    "jest-fail-on-console": "^2.1.1",
     "npm-run-all": "^4.1.5",
     "react-google-charts": "^3.0.15"
   },
