--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -71,6 +71,7 @@
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.3.1",
     "jest-junit": "^13.0.0",
+    "jest-fail-on-console": "^2.1.1",
     "npm-run-all": "^4.1.5"
   },
   "files": [
