--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,37 +30,11 @@ env:
   DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/pr-${{ github.event.number }}/
   PR_URL: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
   RUN_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+  APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  APPLITOOLS_SERVER_URL: "https://eyesapi.applitools.com"
 
 jobs:
-  Static-Checks:
-    name: Licenses, Lint, Jest
-    runs-on: [self-hosted, Linux]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "14"
-
-      - name: Install
-        run: |
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
-          npm ci
-
-      - name: Bootstrap
-        run: npm run bootstrap
-
-      - name: License Check
-        run: npm run license-check
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test
-
   Build-Documentation:
     name: Build Documentation
     runs-on: [self-hosted, Linux]
@@ -155,10 +129,10 @@ jobs:
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
           env_url: ${{env.DOCUMENTATION_URL}}
 
-  A11Y-Tests:
-    name: Accessibility Tests
+  Applitools:
+    name: Applitools Storybook Visual Testing
     needs: [Build-Documentation]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     services:
       storybook:
@@ -169,7 +143,6 @@ jobs:
           - ${{ github.workspace }}/dist:/usr/share/nginx/html
         options: >-
           --name storybook
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -189,82 +162,46 @@ jobs:
         with:
           args: docker restart storybook
 
-      - name: Install automation/pa11y
+      - name: Install automation/Applitools
         run: |
-          cd ${{ github.workspace }}/automation/pa11y
+          cd ${{ github.workspace }}/automation/applitools
           npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
-
-      - name: Test A11Y
+      - name: run Applitools Storybook Visual Testing
+        env:
+          APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+          APPLITOOLS_BATCH_ID: ${{ github.sha }}
         run: |
-          cd ${{ github.workspace }}/automation/pa11y
-          STORYBOOK_URL=http://localhost:9001 npm run pa11y-ci
+          cd ${{ github.workspace }}/automation/applitools
+          npx eyes-storybook -u http://localhost:9001 > applitools-logs.txt
 
-      - name: Clean Folders
-        if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
-
-  Robot:
-    name: Test Robot
-    needs: [Build-Documentation]
-    runs-on: [self-hosted, Linux]
-    timeout-minutes: 60
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [chrome]
-    container:
-      image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/joaoeg/docker-robot-framework:0.1
-      options: --shm-size=6g --cpus 4 -u 2501
-      env:
-        BROWSER: ${{ matrix.browser }}
-        ROBOT_TESTS_DIR: ./automation/robot/storybook
-        ROBOT_REPORTS_DIR: ./reports
-        ROBOT_THREADS: 4
-        ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:${{ matrix.browser }} --exclude bug-${{ matrix.browser }} --exclude bug-${{ matrix.browser }}-webdriver --exclude issue --exclude issue-${{ matrix.browser }} --exclude bug-infrastructure --exclude bug-infrastructure-${{ matrix.browser }}"
-
-    services:
-      storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
-        volumes:
-          - ${{ github.workspace }}/dist:/usr/share/nginx/html
-        options: >-
-          --name storybook
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Fetch Storybook
-        uses: actions/download-artifact@v1
-        with:
-          name: documentation
-          path: ${{ github.workspace }}/dist
-
-      - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
-        with:
-          args: docker restart storybook
-
-      - name: Run Robot
-        run: ./.github/robot-docker/run-tests-in-virtual-screen-with-rerun.sh
-
-      - name: Save Reports
+      - name: Archive Logs
         uses: actions/upload-artifact@v1
         if: failure()
         with:
-          name: ${{ matrix.browser }}-reports
-          path: ${{ github.workspace }}/reports
+          name: applitools-logs
+          path: ${{ github.workspace }}/automation/applitools/applitools-logs.txt
 
       - name: Clean Folders
         if: always()
         run: |
           rm -rf ${{ github.workspace }}/dist
-          rm -rf ${{ github.workspace }}/reports
+
+  batch-completion-notification:
+    needs: [Applitools]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Release
+        # repo scope personal token is required to generate a dispatch event
+        run: |
+          curl -X POST \
+            https://eyesapi.applitools.com/api/externals/github/servers/github.com/commit/${{env.APPLITOOLS_BATCH_ID}}/complete?apiKey=${{env.APPLITOOLS_API_KEY}} \
+            -H "accept:*/*" \
 
   Notify-End:
     name: Notify End
-    needs: [Static-Checks, Github-Deployment, A11Y-Tests, Robot]
+    needs: [Applitools]
     if: always()
     runs-on: ubuntu-latest
 
