--- a/.github/workflows/v2x-release.yml
+++ b/.github/workflows/v2x-release.yml
@@ -25,7 +25,7 @@ env:
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   DOCUMENTATION_PUBLISH_BRANCH: master
   DOCUMENTATION_PUBLISH_FOLDER: uikit/v2.x
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for ${{ github.repository }}/v2.x"
+  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for v2.x of ${{ github.repository }}"
   DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/v2.x/
 
 jobs:
