build: docs repo token update

--- a/.github/workflows/v2x-release.yml
+++ b/.github/workflows/v2x-release.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
           ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
-          ssh-key: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           path: gh-docs
           fetch-depth: 1
 
