--- a/.github/workflows/recover-release.yml
+++ b/.github/workflows/recover-release.yml
@@ -94,7 +94,7 @@ jobs:
         with:
           repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
           ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
-          ssh-key: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+          token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
           path: gh-docs
           fetch-depth: 1
 
