--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "plotly.js-basic-dist": "^1.58.5",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-docgen": "^5.4.0",
     "react-docgen-deprecation-handler": "^1.1.1",
     "react-dom": "^17.0.2",
