build: add codedx scans

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,11 +24,11 @@ on:
 # +----------+-------------------------+          +---------+---------+
 #            |                                              |
 #            |                   +-----------+--------------+
-#            |                   |           |              |                        
-#            |             +-----v----+ +----v-----+ +------v----------------+ 
-#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)| 
-#            |             +-----+----+ +----+-----+ +------+----------------+ 
-#            |                   |           |              |                         
+#            |                   |           |              |
+#            |             +-----v----+ +----v-----+ +------v----------------+
+#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)|
+#            |             +-----+----+ +----+-----+ +------+----------------+
+#            |                   |           |              |
 #            +-------------------+-----+-----+--------------+
 #                                      |
 #                   +----------+       |        +-------+
@@ -39,6 +39,8 @@ env:
   RESOLVE_REGISTRY: https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/npm/
   RELEASE_COMMIT_MESSAGE: "chore(release): publish"
   RUN_URL: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+  CODEDX_SERVER_URL: http://svdrvw16codedx.pentaho.net
+  CODEDX_SERVER_PROJECT_ID: 120
 
 jobs:
   Static-Checks:
@@ -68,6 +70,37 @@ jobs:
 
       - name: Test
         run: npm run test
+
+  CodeDx-Analyze:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14"
+
+      - name: Install
+        run: |
+          npm config set @hv:registry ${RESOLVE_REGISTRY}
+          npm ci
+
+      - name: Bootstrap
+        run: npm run bootstrap
+
+      - name: Build
+        run: npm run build 
+
+      - name: Code Dx Upload
+        uses: "codedx/codedx-github-action@v1.0"
+        with:
+          server-url: ${{ secrets.CODEDX_SERVER_URL }}
+          api-key: ${{ secrets.CODEDX_TOKEN }}
+          project-id: ${{ secrets.CODEDX_SERVER_PROJECT_ID }}
+          source-and-binaries-glob: "./packages/core/dist/**,./packages/code-editor/dist/**,./packages/icons/dist/**,./packages/lab/dist/**,./packages/themes/dist/**"
+          wait-for-completion: true
 
   Build-Documentation:
     name: Build Documentation
