--- a/package.json
+++ b/package.json
@@ -61,14 +61,13 @@
     "@commitlint/config-conventional": "^14.1.0",
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
-    "@storybook/addon-essentials": "6.3.12",
-    "@storybook/addon-links": "6.3.12",
-    "@storybook/react": "6.3.12",
-    "@testing-library/dom": "^7.31.2",
+    "@storybook/addon-essentials": "6.4.12",
+    "@storybook/addon-links": "6.4.12",
+    "@storybook/react": "6.4.12",
+    "@storybook/testing-library": "0.0.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-plugin-optimize-clsx": "^2.6.2",
-    "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "del-cli": "^4.0.1",
     "eslint": "^8.2.0",
@@ -82,6 +81,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-testing-library": "^5.0.0",
     "find-root": "^1.1.0",
     "formik": "^2.2.9",
@@ -99,7 +99,6 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-docgen": "^5.4.0",
-    "react-docgen-deprecation-handler": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-hook-form": "^7.19.5",
@@ -109,6 +108,7 @@
     "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
     "typescript": "^4.4.4",
+    "webpack": "^4.46.0",
     "yalc": "^1.0.0-pre.53",
     "yup": "^0.32.11"
   }
