--- a/automation/pa11y/package.json
+++ b/automation/pa11y/package.json
@@ -16,7 +16,13 @@
     "pa11y-ci": "pa11y-ci --config ./pa11yci.config.js"
   },
   "dependencies": {
+    "axe-core": "^4.3.5",
+    "html_codesniffer": "^2.5.1",
     "pa11y": "^6.1.1",
     "pa11y-ci": "^2.4.2"
+  },
+  "overrides": {
+    "axe-core": "$axe-core",
+    "html_codesniffer": "$html_codesniffer"
   }
 }
