--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,14 +5,14 @@ on:
       - master
 
 # flow:
-# +------------------------------------+          +-------------------+
-# |Static-Checks (Licenses, Lint, Jest)|          |Build-Documentation|
-# +----------+-------------------------+          +---------+---------+
+# +------------------------------------+     +---------------------------------+
+# |Static-Checks (Licenses, Lint, Jest)|     |Build-Storybook (v2 and v3 store)|
+# +----------+-------------------------+     +--------------+------------------+
 #            |                                              |
 #            |                   +-----------+----------------------------------------+
 #            |                   |           |              |                         |
 #            |             +-----v----+ +----v-----+ +------v----------------+ +------v----------+
-#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)| |Github-Deployment|
+#            |             |A11Y-Tests| |Applitools| |    Robot (chrome)     | |Github-Deployment|
 #            |             +--------+-+ +--+-------+ +------+----------------+ +------+----------+
 #            |                      |      |                |                         |
 #            |                      |      |                |                         |
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
@@ -64,15 +64,15 @@ jobs:
       - name: Test
         run: npm run test
 
-  Build-Documentation:
-    name: Build Documentation
-    runs-on: [self-hosted, Linux]
+  Build-Storybook-V2-Store:
+    name: Build Storybook (v2 store)
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
@@ -84,14 +84,49 @@ jobs:
       - name: Bootstrap
         run: npm run bootstrap
 
-      - name: Generate Documentation
+      - name: Build Storybook
+        run: |
+          V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
+
+      - name: Archive Storybook
+        uses: actions/upload-artifact@v2
+        with:
+          name: storybook-v2
+          path: ${{ github.workspace }}/dist
+
+      - name: Clean Folders
+        if: always()
+        run: |
+          rm -rf ${{ github.workspace }}/dist
+
+  Build-Storybook-V3-Store:
+    name: Build Storybook (v3 store)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Install
+        run: |
+          npm config set @hv:registry ${RESOLVE_REGISTRY}
+          npm ci
+
+      - name: Bootstrap
+        run: npm run bootstrap
+
+      - name: Build Storybook
         run: |
           npm run build-documentation
 
-      - name: Archive Documentation
-        uses: actions/upload-artifact@v1
+      - name: Archive Storybook
+        uses: actions/upload-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
@@ -101,7 +136,7 @@ jobs:
 
   Applitools:
     name: Applitools Storybook Visual Testing
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V2-Store]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -118,14 +153,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -148,7 +183,7 @@ jobs:
           npx eyes-storybook -u http://localhost:9001 > applitools-logs.txt
 
       - name: Archive Logs
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: applitools-logs
@@ -173,7 +208,7 @@ jobs:
 
   Github-Deployment:
     name: Github Deployment
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V3-Store]
     runs-on: ubuntu-latest
 
     steps:
@@ -201,9 +236,9 @@ jobs:
           rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/gh-docs/${{env.DOCUMENTATION_PUBLISH_FOLDER}}
 
       - name: Push Documentation
@@ -232,7 +267,7 @@ jobs:
 
   A11Y-Tests:
     name: Accessibility Tests
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V3-Store]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -249,14 +284,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "16" # npm 8.x needed for overrides
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -282,22 +317,18 @@ jobs:
 
   Robot:
     name: Test Robot
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V3-Store]
     runs-on: [self-hosted, Linux]
     timeout-minutes: 60
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [chrome]
     container:
       image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/joaoeg/docker-robot-framework:0.1
       options: --shm-size=6g --cpus 4 -u 2501
       env:
-        BROWSER: ${{ matrix.browser }}
+        BROWSER: chrome
         ROBOT_TESTS_DIR: ./automation/robot/storybook
         ROBOT_REPORTS_DIR: ./reports
         ROBOT_THREADS: 4
-        ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:${{ matrix.browser }} --exclude bug-${{ matrix.browser }} --exclude bug-${{ matrix.browser }}-webdriver --exclude issue --exclude issue-${{ matrix.browser }} --exclude bug-infrastructure --exclude bug-infrastructure-${{ matrix.browser }}"
+        ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:chrome --exclude bug-chrome --exclude bug-chrome-webdriver --exclude issue --exclude issue-chrome --exclude bug-infrastructure --exclude bug-infrastructure-chrome"
 
     services:
       storybook:
@@ -311,9 +342,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -325,10 +356,10 @@ jobs:
         run: ./.github/robot-docker/run-tests-in-virtual-screen-with-rerun.sh
 
       - name: Save Reports
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
-          name: ${{ matrix.browser }}-reports
+          name: chrome-reports
           path: ${{ github.workspace }}/reports
 
       - name: Clean Folders
@@ -344,10 +375,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # delete artifact since it was published to gh-pages
+      # delete storybook artifacts
       - uses: geekyeggo/delete-artifact@v1
         with:
-          name: documentation
+          name: |
+            storybook-v2
+            storybook-v3
 
       - uses: technote-space/workflow-conclusion-action@v1
 
