--- a/.github/workflows/run-full-tests-on-branch.yml
+++ b/.github/workflows/run-full-tests-on-branch.yml
@@ -3,9 +3,9 @@ on:
   workflow_dispatch:
 
 # flow:
-# +------------------------------------+          +-------------------+
-# |Static-Checks (Licenses, Lint, Jest)|          |Build-Documentation|
-# +----------+-------------------------+          +---------+---------+
+# +------------------------------------+     +---------------------------------+
+# |Static-Checks (Licenses, Lint, Jest)|     |Build-Storybook (v2 and v3 store)|
+# +----------+-------------------------+     +--------------+------------------+
 #            |                                              |
 #            |                   +-----------+--------------+
 #            |                   |           |              |
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
@@ -51,15 +51,15 @@ jobs:
       - name: Test
         run: npm run test
 
-  Build-Documentation:
-    name: Build Documentation
-    runs-on: [self-hosted, Linux]
+  Build-Storybook-V2-Store:
+    name: Build Storybook (v2 store)
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
@@ -71,14 +71,49 @@ jobs:
       - name: Bootstrap
         run: npm run bootstrap
 
-      - name: Generate Documentation
+      - name: Build Storybook
+        run: |
+          V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
+
+      - name: Archive Storybook
+        uses: actions/upload-artifact@v2
+        with:
+          name: storybook-v2
+          path: ${{ github.workspace }}/dist
+
+      - name: Clean Folders
+        if: always()
+        run: |
+          rm -rf ${{ github.workspace }}/dist
+
+  Build-Storybook-V3-Store:
+    name: Build Storybook (v3 store)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Install
+        run: |
+          npm config set @hv:registry ${RESOLVE_REGISTRY}
+          npm ci
+
+      - name: Bootstrap
+        run: npm run bootstrap
+
+      - name: Build Storybook
         run: |
           npm run build-documentation
 
-      - name: Archive Documentation
-        uses: actions/upload-artifact@v1
+      - name: Archive Storybook
+        uses: actions/upload-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
@@ -88,7 +123,7 @@ jobs:
 
   A11Y-Tests:
     name: Accessibility Tests
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V3-Store]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -105,14 +140,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "16" # npm 8.x needed for overrides
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -138,7 +173,7 @@ jobs:
 
   Applitools:
     name: Applitools Storybook Visual Testing
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V2-Store]
     runs-on: [self-hosted, Linux]
 
     services:
@@ -155,14 +190,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -184,7 +219,7 @@ jobs:
           npx eyes-storybook -u http://localhost:9001 > applitools-logs.txt
 
       - name: Archive Logs
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: applitools-logs
@@ -197,7 +232,7 @@ jobs:
 
   Robot:
     name: Test Robot
-    needs: [Build-Documentation]
+    needs: [Build-Storybook-V3-Store]
     runs-on: [self-hosted, Linux]
     timeout-minutes: 60
     strategy:
@@ -227,9 +262,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fetch Storybook
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: documentation
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -241,7 +276,7 @@ jobs:
         run: ./.github/robot-docker/run-tests-in-virtual-screen-with-rerun.sh
 
       - name: Save Reports
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: ${{ matrix.browser }}-reports
@@ -260,10 +295,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # delete artifact since it was published to gh-pages
+      # delete storybook artifacts
       - uses: geekyeggo/delete-artifact@v1
         with:
-          name: documentation
+          name: |
+            storybook-v2
+            storybook-v3
 
       - uses: technote-space/workflow-conclusion-action@v1
 
