--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
-          npx lerna publish from-package --no-git-reset --yes
+          npm run publish-${{ env.RELEASE_TYPE }} -- --no-git-reset
 
       - name: Get Releases Commit Message
         uses: actions/github-script@v3
