--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "yalc": "npx npm-run-all --npm-path npm --serial build yalc-publish",
     "yalc-publish": "npx lerna run yalc-publish --parallel",
     "generate": "node scripts/generator/index.js",
-    "publish-": "npx lerna changed && npx lerna publish --yes",
-    "publish-prerelease": "npx lerna changed && npx lerna publish prerelease --yes",
-    "publish-prepatch": "npx lerna changed && npx lerna publish prepatch --yes",
-    "publish-patch": "npx lerna changed && npx lerna publish patch --yes",
-    "publish-preminor": "npx lerna changed && npx lerna publish preminor --yes",
-    "publish-minor": "npx lerna changed && npx lerna publish minor --yes",
-    "publish-premajor": "npx lerna changed && npx lerna publish premajor --yes",
-    "publish-major": "npx lerna changed && npx lerna publish major --yes",
+    "publish-": "npx lerna changed && npx lerna publish --yes --skip-npm && lerna run publish-npm",
+    "publish-prerelease": "npx lerna changed && npx lerna publish prerelease --yes --skip-npm && lerna run publish-npm",
+    "publish-prepatch": "npx lerna changed && npx lerna publish prepatch --yes --skip-npm && lerna run publish-npm",
+    "publish-patch": "npx lerna changed && npx lerna publish patch --yes --skip-npm && lerna run publish-npm",
+    "publish-preminor": "npx lerna changed && npx lerna publish preminor --yes --skip-npm && lerna run publish-npm",
+    "publish-minor": "npx lerna changed && npx lerna publish minor --yes --skip-npm && lerna run publish-npm",
+    "publish-premajor": "npx lerna changed && npx lerna publish premajor --yes --skip-npm && lerna run publish-npm",
+    "publish-major": "npx lerna changed && npx lerna publish major --yes --skip-npm && lerna run publish-npm",
     "lint": "npx npm-run-all --npm-path npm --parallel lint:*",
     "lint:eslint": "npx eslint ./ --cache --ignore-pattern .gitignore --ext .js,.jsx,.ts,.tsx",
     "lint:prettier": "npx lerna run lint:prettier",
