--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,8 @@
     "yalc-publish": "npx yalc publish --no-scripts",
     "lint:prettier": "npx prettier --config ../../prettier.config.js --check \"src/**/*.js\"",
     "license-check": "node ../../scripts/license-check.cjs ../../config/license-check.json",
-    "ts-check": "npx tsc -p ."
+    "ts-check": "npx tsc -p .",
+    "publish-npm": "npm publish --access public"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.11.0",
