--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -36,7 +36,8 @@
     "yalc-publish": "npx yalc publish --no-scripts",
     "license-check": "node ../../scripts/license-check.cjs ../../config/license-check.json",
     "lint:prettier": "npx prettier --config ../../prettier.config.js --check \"src/**/*.js\"",
-    "ts-check": "npx tsc -p ."
+    "ts-check": "npx tsc -p .",
+    "publish-npm": "npm publish --access public"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.11.0",
